--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     background-color: #222222;
 }
 #Date{
-    font-size: 20px !important;
+    font-size: 20px;
     text-align: center;
 }
 .ul-parent{
